# robo

./: .gitignore  LICENSE  README.md  Taskfile.yml  camera.py  location.py  location_detect_by_camera.py  main.py  mr999.py  pyproject.toml  screen.py  state.py
src/msg_mr999/: CMakeLists.txt  package.xml
src/urdf_mr999/: CMakeLists.txt  mr999.urdf  package.xml  setup.cfg  setup.py
src/urdf_mr999/msg/: Control.msg
src/urdf_mr999/urdf_mr999/: control_publisher.py  control_subscriber.py  hid_interface.py
